tests/errors/types/unknown_member_type.ne
struct Test
{
    a: ransdjaksdjlkajd;
}

function main(): int32
{
    return 0;
}
